.provarCaches/00D5f000005vwGkEAI/objects/rstk__taskalert__c.object
<CustomObject>
    <description>taskalert__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divtaskalerts</relationshipLabel>
        <relationshipName>divtaskalerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>TASKALERTs</relationshipLabel>
        <relationshipName>TASKALERTs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_level__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>LEVEL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_msg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MSG</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_proj__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PROJ</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_proj_ui__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>proj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>taskalerts</relationshipLabel>
        <relationshipName>taskalerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_task__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>TASK</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taskalert_ts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>TASKALERT</label>
    <nameField>
        <label>TASKALERT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TASKALERTs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>